// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index-signature.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class LocalStorage implements Storage {
  [index: number]: string;
  [key: string]: any;
}

=====================================output=====================================
class LocalStorage implements Storage {
  [index: number]: string;
  [key: string]: any;
}

================================================================================
`;

exports[`static.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo {
  static [value: string]: Type;
}

=====================================output=====================================
class Foo {
  static [value: string]: Type;
}

================================================================================
`;
